# structural-kernel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: deploy-keys.sh
.github/workflows/: ci.yml
docs/: kernel-internals.md  kickoff.md  overview-for-engineers.md  vision.md  xara-license-email-draft.md
docs/decisions/: 0001-repo-and-toolchain.md  0002-canonical-units.md  0003-solver-agnostic-xara-first.md  0004-intent-registry-and-two-site-enforcement.md  0005-eid-identity-scheme.md  0006-ndswood-as-nds-engine.md  0007-multi-material-design-engines.md  0008-steel-framing-and-heterogeneous-exploration.md  0009-llm-proposer.md  0010-closed-loop-llm-refinement.md  0011-spatial-structural-constraints.md  0012-cost-basis-and-priced-evaluation.md  0013-ingestion-seam-referenced-geometry-and-inferred-provenance.md  0014-concrete-framing-dimensioned-members.md  README.md
docs/design/: 0001-kernel-and-solver-architecture.md  0001-review-findings-reply.md  0001-review-response.md  0002-eid-identity-scheme.md  0002-review.md  0003-phase1-domain-assumptions.md  0005-ingestion-and-constraint-capture.md
docs/notes/: 0002-spatial-constraint-reframe.md  0003-priced-factors-over-countables.md  0004-ingestion-seam.md  0006-concrete-framing-sprint-steer.md
src/structural_kernel/: __init__.py  canonical.py  capture.py  constraints.py  costing.py  decisions.py  derivation.py  design_checks.py  eids.py  explorations.py  ids.py  intents.py  kernel.py  llm.py  llm_anthropic.py  loads.py  nds.py  objects.py  planar.py  queries.py  referenced.py  sections.py  solver.py  store.py  units.py  validation.py  xara_adapter.py
src/structural_kernel/materials/: __init__.py  base.py  concrete.py  registry.py  steel.py  wood.py
tests/: conftest.py  reference_solver.py  test_acceptance_milestone.py  test_canonical.py  test_concrete_framing.py  test_constraints.py  test_decisions.py  test_derivation.py  test_design_checks.py  test_exploration.py  test_heterogeneous_exploration.py  test_ingestion_provenance.py  test_intents.py  test_kernel.py  test_llm_proposer.py  test_loads.py  test_materials.py  test_objects.py  test_overrides.py  test_priced_evaluation.py  test_referenced_geometry.py  test_scaffold.py  test_solver_verification.py  test_steel_framing.py  test_store.py  test_units.py
tests/fixtures/: arch-grids-v1.json  arch-grids-v2-moved.json  arch-grids-v2-removed.json
