[project]
name = "structural-kernel"
version = "0.0.1"
description = "AI-native structural building model kernel: decision graph, derivation, solver service, exploration loop"
requires-python = ">=3.14"
license = "LicenseRef-Proprietary"
dependencies = [
    "pydantic>=2.11",
]

[project.optional-dependencies]
# The blessed engine (ADR 0003). No Windows binaries as of 2026-07: the
# opensees wheel ships Linux .so files, so install this extra on Linux
# (CI, container, WSL). The adapter import-guards; its tests skip when the
# native runtime is absent.
xara = [
    "xara>=0.0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.130",
    "pyright>=1.1.400",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structural_kernel"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
