[project]
name = "structural-kernel"
version = "0.0.1"
description = "AI-native structural building model kernel: decision graph, derivation, solver service, exploration loop"
# Dev toolchain is 3.14; the floor is 3.13 because the blessed engine's
# native wheels (opensees, pulled by xara) top out at cp313 as of 2026-07.
# Raise the floor when xara ships cp314 wheels.
requires-python = ">=3.13"
license = "LicenseRef-Proprietary"
dependencies = [
    "pydantic>=2.11",
    # NDS 2024 calculation engine behind the design-check adapter (ADR 0006).
    # Private repo; CI authenticates with a read-only deploy key.
    "ndswood",
]

[tool.uv.sources]
ndswood = { git = "https://github.com/mflamer/ndswood" }

[project.optional-dependencies]
# The blessed engine (ADR 0003). Native wheels exist for Linux/macOS on
# CPython <= 3.13 only (as of 2026-07), so the extra is marker-gated: on
# 3.14 it resolves empty instead of dragging in an ancient opensees that
# lacks the module xara imports. The opensees floor pins the resolver to
# a version that actually carries opensees.openseespy. The adapter
# import-guards; its tests skip when the native runtime is absent.
xara = [
    "xara>=0.0.13; python_version < '3.14' and sys_platform == 'linux'",
    "opensees>=0.1.27; python_version < '3.14' and sys_platform == 'linux'",
]

[tool.uv]
# Resolve only for CPython on real platforms: opensees declares a
# PyPy/emscripten-only dependency (tcinter>=1.0) that does not exist on
# PyPI, which otherwise poisons universal resolution.
environments = [
    "sys_platform == 'win32' and platform_python_implementation == 'CPython'",
    "sys_platform == 'linux' and platform_python_implementation == 'CPython'",
    "sys_platform == 'darwin' and platform_python_implementation == 'CPython'",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.130",
    "pyright>=1.1.400",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structural_kernel"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.13"  # the support floor — keeps 3.14-only usage out
reportMissingTypeStubs = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
